--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -61,10 +61,7 @@
     color: black;
 }
 .footer_info{
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
+    text-align: start;
     padding-bottom: 1rem;
 }
 .footer_input{
@@ -79,3 +76,20 @@
     border-radius: 5px;
     margin-left: 1rem;
 }
+
+@media (max-width: 640px) {
+    .footer {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    .footer_items{
+        padding-top: 1.2rem;
+    }
+ }
+
+    @media (min-width: 641px) and (max-width: 1024px) {
+      .footer {
+        grid-template-columns: repeat(2, 1fr); 
+      }
+    }
+
+   
