--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -71,7 +71,7 @@
 
 .footer_btn{
     padding: 0.6rem 1rem;
-    background: green;
+    background: #006F33;
     color: white;
     border-radius: 5px;
     margin-left: 1rem;
